[gd_scene load_steps=3 format=3 uid="uid://xadk0ohd11e2"]

[ext_resource type="Script" uid="uid://uibi82bg3qtr" path="res://ui/hud/modal.gd" id="1_bfa1b"]
[ext_resource type="Texture2D" uid="uid://dswnlmaeo8t3o" path="res://icon.svg" id="1_h8qmc"]

[node name="Modal" type="ColorRect"]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)
script = ExtResource("1_bfa1b")

[node name="CenterContainer" type="CenterContainer" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -1.0
offset_right = 2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WindowPanel" type="PanelContainer" parent="CenterContainer"]
z_index = 10
custom_minimum_size = Vector2(400, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/WindowPanel"]
z_index = 10
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="CenterContainer/WindowPanel/VBoxContainer"]
z_index = 10
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/WindowPanel/VBoxContainer/TitleBar"]
z_index = 10
layout_mode = 2
text = "視窗標題"
horizontal_alignment = 1

[node name="CloseButton" type="TextureButton" parent="CenterContainer/WindowPanel/VBoxContainer/TitleBar"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("1_h8qmc")

[node name="HSeparator" type="HSeparator" parent="CenterContainer/WindowPanel/VBoxContainer"]
z_index = 10
layout_mode = 2

[node name="ContentLabel" type="RichTextLabel" parent="CenterContainer/WindowPanel/VBoxContainer"]
z_index = 10
layout_mode = 2
size_flags_vertical = 3

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CenterContainer/WindowPanel/VBoxContainer/TitleBar/CloseButton" to="." method="_on_close_button_pressed"]
